# netron-computer

./: .env.example  .gitignore  README.md  pyproject.toml
android/: README.md  local.properties  rustore-upload-cert.pem  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: viewer.css  viewer.html  viewer.js
android/app/src/main/java/com/netronru/netroncomputer/: AppSettings.kt  Discovery.kt  MainActivity.kt  UiStrings.kt  ViewerActivity.kt
android/app/src/main/res/drawable/: bg_icon_button.xml  bg_input.xml  ic_launcher_foreground.xml  ic_settings.xml
android/app/src/main/res/layout/: activity_main.xml  activity_viewer.xml  dialog_login.xml  dialog_settings.xml
android/app/src/main/res/values/: strings.xml  themes.xml
netron_computer/: __init__.py  __main__.py  app.py  config_store.py  configure_auth.py  desktop_app.py
netron_computer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
netron_computer/static/: app.js  index.html  login.html  manifest.webmanifest  mobile.css  mobile.html  mobile.js  service-worker.js  styles.css
packaging/: build_appimage.sh  build_deb.sh  build_exe.ps1  netron-computer.desktop
